# routeroot

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  docker-compose.yml
agent-api/: Cargo.toml  Dockerfile
agent-api/src/: auth.rs  config.rs  db.rs  error.rs  main.rs
agent-api/src/routes/: deploy.rs  domains.rs  health.rs  managed_domains.rs  mod.rs  records.rs  webhook.rs
agent-api/src/services/: builder.rs  cleanup.rs  dns.rs  docker.rs  mod.rs  proxy.rs  verify.rs
caddy/: Caddyfile
cli/: Cargo.toml
cli/src/: main.rs
coredns/: Corefile
coredns/zones/: db.agentdns.dev  db.routeroot.dev
mcp-server/: Cargo.toml  Dockerfile
mcp-server/src/: main.rs
scripts/: doctor.sh  setup.sh  update.sh
